<resources>
    <string name="app_name">Vinilos</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_artists">Artists</string>
    <string name="main_quote">\"People Aren\'t Hearing All the Music\". Dr Dre</string>
    <string name="main_description">We are a platform that provides the amateur collector with the possibility of acquiring new or used vinyl records, either through purchase or exchange. Become one of our collectors and sell or trade the records you have available.</string>
    <string name="main_sign_as_user">Sign in as user</string>
    <string name="main_sign_as_collector">Sign in as collector</string>
    <string name="vinilos">DjVinilos</string>
    <string name="albums_search">Search album</string>
    <string name="album_name">Album name</string>
    <string name="album_cover_image_url">Cover image url</string>
    <string name="album_release_date">Release date</string>
    <string name="album_description">Description</string>
    <string name="album_genre">Genre</string>
    <string name="album_record_label">Record label</string>
    <string name="add_album">Add album</string>
    <string name="artist_search">Search artist</string>
    <string name="try_again">Try again</string>
    <string name="network_error">There was an error loading the data</string>
    <string name="loading">Loading</string>
    <string name="empty_albums">No albums</string>
    <string name="empty_artist">No artists</string>
    <string name="collectors_search">Search collector</string>
    <string name="empty_collectors">No collectors</string>
    <string name="album_detail_release_date">Release date:&#160;</string>
    <string name="album_detail_authors">Authors:&#160;</string>
    <string name="album_detail_tracks">Tracks</string>
    <string name="plus">+</string>
    <string name="album_detail_add_track">Add track</string>
    <string name="add_new_album_button">Add new album button</string>
    <string name="add_new_artist_button">Add new artist button</string>
    <string name="collectors">Collectors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_name">Track name</string>
    <string name="track_duration">Track duration</string>
    <string name="add_track">Add track</string>
    <string name="contacto">Contacto</string>
    <string name="favorite_performers">Favorite performers</string>
</resources>