<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/vinilos_dark_gray">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/vinilos"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/banner_section"
        app:layout_constraintVertical_bias="0"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/banner_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/home"
        app:layout_constraintTop_toBottomOf="@id/header_section"
        app:layout_constraintBottom_toTopOf="@id/quote_section"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/quote_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_quote"
        android:textAlignment="center"
        android:textSize="25sp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/banner_section"
        app:layout_constraintBottom_toTopOf="@id/description_section"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_section"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_description"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/quote_section"
        app:layout_constraintBottom_toTopOf="@+id/actions_section"
        android:background="@color/vinilos_light_gray"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        />

    <LinearLayout
        android:id="@+id/actions_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_as_user"
            app:cornerRadius="10dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/vinilos_pink"
            android:text="@string/main_sign_as_user"
            android:textSize="10sp"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_as_collector"
            app:cornerRadius="10dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/vinilos_pink"
            android:text="@string/main_sign_as_collector"
            android:textSize="10sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>